--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  repo: StacyLafume/NOSA # Branch to update (optional; defaults to master)
+  branch: main
 
 media_folder: "public/images" # Media files will be stored in the repo under public/images
 public_folder: "/images" # The src attribute for uploaded media will begin with /images
